[package]
name = "rastro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.20"
quick-xml = { version = "0.23.0", features = ["serialize", "encoding"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_repr = "0.1.9"
signal-hook = "0.3.14"
