[package]
name = "celestial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
futures = "0.3"
url = "2.3"
reqwest = { version = "0.11.13", features = ["blocking", "stream"] }
async-compression = { version = "0.3.15", features = ["all"] }
flate2 = "1.0"
csv-async = "1.2.4"
csv = "1.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.4", features = ["full"]}
async-trait = {version = "0.1"}
dirs = "4.0.0"
env_logger = "0.9.1"

[dev-dependencies]
tokio-test = "0.4.2"
