[package]
name = "fits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
rustronomy-fits = "0.1.0"
ndarray = "0.15"
ndarray-stats = "0.5.1"
image = "0.24"
imageproc = "0.23.0"
plotters = "0.3"
