[package]
name = "rastro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.20"
env_logger = "0.9.1"
log = "0.4.17"
quick-xml = { version = "0.23.0", features = ["serialize", "encoding"] }
regex = "1.6.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_repr = "0.1.9"
signal-hook = "0.3.14"
# sea-orm = { version = "0.10.5", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros"]}
#tokio = { version = "1", features = ["full"] }
#actix = {version = "0.4.5"}
[dev-dependencies]
#sea-orm = { features = ["sqlx-sqlite"]}