[package]
name = "rastro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.17"
pretty_env_logger = "0.4.0"

async-trait = "0.1.61"
tokio = {version = "1.24.1", features = ["full"]}
tokio-util = {version = "0.7.4", features = ["full"]}
num_cpus = "1.15.0"


serde = { version = "1.0.142", features = ["derive"] }
toml = "0.5.10"
bincode = "1.3.3"
quick-xml = { version = "0.27.1", features = ["serialize", "encoding"]}
signal-hook = "0.3.14"

[dev-dependencies]